--- a/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
+++ b/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
@@ -1,4 +1,6 @@
 <script type="text/javascript" src="/dynamicAssets/javascripts/webgazer.js"></script>
+<script type="text/javascript" src="/dynamicAssets/javascripts/calibration.js"></script>
+<script type="text/javascript" src="/dynamicAssets/javascripts/precision_calculation.js"></script>
 <div style="height: 100% ; width: 100%; display: table;font-size:20;">
         <div ng-if="RC.showMessage == 'none'" style="display: table-cell ; height: 100% ; vertical-align: middle ;">
             <div ng-if="RC.state == 'instructionsSlide'" class="panel panel-primary" style="width:90%; margin:auto">
@@ -27,10 +29,18 @@
                 </div>
             </div>
 
-            <div ng-if="RC.state == 'calibrationSlide'" class="panel panel-primary" style="width:90%; margin:auto">
-                <div class="panel-heading" style="font-weight: bolder ;">Instructions</div>
-                <div class="panel-body">
-                    <button ng-click="RC.next()" type="button" class="btn btn-default" style="float:right ; margin-top:20px;font-size:20;">Next</button>
+            <div ng-if="RC.state == 'calibrationSlide'" class="panel panel-primary" style="width:90%; margin:auto" ng-init="RC.startCalibration()">
+                <canvas id="plotting_canvas" width="500" height="500" style="cursor:crosshair;"></canvas>
+                <div class="calibrationDiv">
+                    <input type="button" class="Calibration" id="Pt1"></input>
+                    <input type="button" class="Calibration" id="Pt2"></input>
+                    <input type="button" class="Calibration" id="Pt3"></input>
+                    <input type="button" class="Calibration" id="Pt4"></input>
+                    <input type="button" class="Calibration" id="Pt5"></input>
+                    <input type="button" class="Calibration" id="Pt6"></input>
+                    <input type="button" class="Calibration" id="Pt7"></input>
+                    <input type="button" class="Calibration" id="Pt8"></input>
+                    <input type="button" class="Calibration" id="Pt9"></input>
                 </div>
             </div>
 
