--- a/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
+++ b/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
@@ -1,6 +1,8 @@
 <script type="text/javascript" src="/dynamicAssets/javascripts/webgazer.js"></script>
 <script type="text/javascript" src="/dynamicAssets/javascripts/calibration.js"></script>
 <script type="text/javascript" src="/dynamicAssets/javascripts/precision_calculation.js"></script>
+<script type="text/javascript" src="/dynamicAssets/javascripts/resize_canvas.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <div style="height: 100% ; width: 100%; display: table;font-size:20;">
         <div ng-if="RC.showMessage == 'none'" style="display: table-cell ; height: 100% ; vertical-align: middle ;">
             <div ng-if="RC.state == 'instructionsSlide'" class="panel panel-primary" style="width:90%; margin:auto">
@@ -29,7 +31,7 @@
                 </div>
             </div>
 
-            <div ng-if="RC.state == 'calibrationSlide'" class="panel panel-primary" style="width:90%; margin:auto" ng-init="RC.startCalibration()">
+            <div ng-if="RC.state == 'calibrationSlide'" class="panel panel-primary" style="width:100%; height:100%; margin:auto" ng-init="RC.startCalibration()">
                 <canvas id="plotting_canvas" width="500" height="500" style="cursor:crosshair;"></canvas>
                 <div class="calibrationDiv">
                     <input type="button" class="Calibration" id="Pt1"></input>
@@ -44,7 +46,7 @@
                 </div>
             </div>
 
-            <div id="experiment_content" ng-if="RC.state == 'practiceQuestionSlide' && RC.practiceQuestionIndex == $index" ng-repeat="pquestion in RC.practiceQuestions" style="width:90%; margin:auto">
+            <div id="experiment_content" ng-if="RC.state == 'practiceQuestionSlide' && RC.practiceQuestionIndex == $index" ng-repeat="pquestion in RC.practiceQuestions" style="width:100%; margin:auto">
             <div class="panel panel-primary" style="width:90%; margin:auto">
                 <div class="panel-body">
 
@@ -114,7 +116,7 @@
         </div>
     </div>
 
-    <div  ng-if="RC.state == 'experimentStartSlide'" class="panel panel-primary" style="width:90%; margin:auto">
+    <div  ng-if="RC.state == 'experimentStartSlide'" class="panel panel-primary" style="width:100%; margin:auto">
             <div class="panel-heading" style="font-weight: bolder ;">Instructions</div> 
             <div class="panel-body">
 
