adjusted the visual part of the experiment

--- a/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
+++ b/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
@@ -133,9 +133,9 @@
             </div>
         </div>
 
-            <div id="experiment_content" ng-init="RC.startTimer()" ng-if="RC.state == 'questionSlide' && RC.questionIndex == $index" ng-repeat="question in RC.questions" style="width:90%; margin:auto">
+            <div id="experiment_content" ng-init="RC.startTimer()" ng-if="RC.state == 'questionSlide' && RC.questionIndex == $index" ng-repeat="question in RC.questions" style="width:90%; height:90%; margin:auto">
                 <!-- the main content of the experiment goes here -->
-                <div id="experiment_panel_1" class="panel panel-primary">
+                <div id="experiment_panel_1" class="panel panel-primary" style="height:100%; width:90%; margin-bottom:0px">
                     <!-- <div id="experiment_heading_1" class="panel-heading" style="font-weight: bolder ;"></div> --> 
                     <div align="right" style="margin-right:20px;margin-top:10px;"> Progress:
                         <div id="myProgress" align="left">
@@ -153,29 +153,29 @@
                         Incorrect
                     </div> 
 
-                    <div id="question_slide_content">
-                        <div align="center">
-                        <b>The previous participant said:</b><img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.msg}}.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left: 7px; margin-bottom:15px">
+                    <div id="question_slide_content" style="height:100%;width:100%">
+                        <div align="center" style="margin: bottom 15%;">
+                        <b>The previous participant said:</b><img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.msg}}.png" style="max-width: 100px ; max-height:100px ; display: inline ; margin: 0 auto; margin-left: 7px; margin-bottom:15px">
                         </div>
                         
                         <table align="center">
                             <tbody>
                                 <tr>
                                     <td>
-                                    <div width="150px" id="img1">
-                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.img1}}.png" style="max-width: 200px ; max-height: 180px ; display: block ; margin: 0 auto; margin-bottom:15px; margin-top:7px; cursor: pointer; border: 1px solid black" ng-click="RC.nextQuestion('0')">
+                                    <div id="img1" style="width:25vw; border: 1px solid black">
+                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.img1}}.png" style="max-width: 200px ; max-height: 180px ; display: block ; margin: 0 auto; margin-bottom:15px; margin-top:7px; cursor: pointer" ng-click="RC.nextQuestion('0')">
                                     </div>
                                     </td>
 
                                     <td>
-                                    <div width="150px" id="img2">
-                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.img2}}.png" style="max-width: 200px ; max-height: 180px ; display: block ; margin: 0 auto; margin-bottom:15px; margin-top:7px; cursor: pointer; border: 1px solid black" ng-click="RC.nextQuestion('1')">
+                                    <div id="img2" style="width:25vw; border: 1px solid black">
+                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.img2}}.png" style="max-width: 200px ; max-height: 180px ; display: block ; margin: 0 auto; margin-bottom:15px; margin-top:7px; cursor: pointer" ng-click="RC.nextQuestion('1')">
                                     </div>
                                     </td>
 
                                     <td>
-                                    <div width="150px" id="img3">
-                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.img3}}.png" style="max-width: 200px ; max-height: 180px ; display: block ; margin: 0 auto; margin-bottom:15px; margin-top:7px; cursor: pointer; border: 1px solid black" ng-click="RC.nextQuestion('2')">
+                                    <div id="img3" style="width:25vw; border: 1px solid black">
+                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.img3}}.png" style="max-width: 200px ; max-height: 180px ; display: block ; margin: 0 auto; margin-bottom:15px; margin-top:7px; cursor: pointer" ng-click="RC.nextQuestion('2')">
                                     </div>
                                     </td>
 
@@ -189,13 +189,13 @@
                             <tbody>
                                 <tr>
                                     <td>
-                        <div style="margin-top:10px; margin-bottom:5px; margin-left:10px; margin-right:10px">
-                            <p><b>These were the messages available to the previous participant:</b></p>
-                            <div align="center">
-                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/ci.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-bottom:15px; margin-top: 5px">
-                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/tr.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-bottom:15px; margin-top: 5px">
-                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/gr.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-bottom:15px; margin-top: 5px">
-                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/re.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-bottom:15px; margin-top: 5px">
+                        <div style="width: 100%; margin-top:10px; margin-left:10px; margin-right:10px">
+                        </div align="center"><b>These were the messages available to the previous participant:</b></div>
+                            <div align="center" style="margin-top:15%">
+                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/ci.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left:5vw; margin: right 5vw; margin-bottom:15px; margin-top: 5px">
+                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/tr.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left:5vw; margin: right 5vw; margin-bottom:15px; margin-top: 5px">
+                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/gr.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left:5vw; margin: right 5vw; margin-bottom:15px; margin-top: 5px">
+                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/re.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left:5vw; margin: right 5vw; margin-bottom:15px; margin-top: 5px">
                             </div>
                         </div>
 
