--- a/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
+++ b/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
@@ -143,7 +143,7 @@
                         </div>
                     </div>
 
-                    <div id="experiment_body_1" class="panel-body" style="height:600; display:flex;align-items:center;justify-content: center;">
+                    <div id="experiment_body_1" class="panel-body" style="height:60%; display:flex;align-items:center;justify-content: center;">
 
                     <div id="feedback_correct" style="display:none; font-size:35;justify-content:center;">
                         Correct!
@@ -192,10 +192,10 @@
                         <div style="width: 100%; height:50%; margin-top:10px; margin-left:10px; margin-right:10px">
                         <div align="center"><b>These were the messages available to the previous participant:</b></div>
                             <div align="center" style="height:90%">
-                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/ci.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left:5vw; margin-right: 5vw; margin-bottom:15px; margin-top: 5px">
-                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/tr.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left:5vw; margin-right: 5vw; margin-bottom:15px; margin-top: 5px">
-                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/gr.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left:5vw; margin-right: 5vw; margin-bottom:15px; margin-top: 5px">
-                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/re.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left:5vw; margin-right: 5vw; margin-bottom:15px; margin-top: 5px">
+                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/ci.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left:6vw; margin-right: 6vw; margin-bottom:15px; margin-top: 5px">
+                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/tr.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left:6vw; margin-right: 6vw; margin-bottom:15px; margin-top: 5px">
+                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/gr.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left:6vw; margin-right: 6vw; margin-bottom:15px; margin-top: 5px">
+                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/re.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-left:6vw; margin-right: 6vw; margin-bottom:15px; margin-top: 5px">
                             </div>
                         </div>
 
