--- a/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
+++ b/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
 
-            <div ng-if="RC.state == 'calibrationSlide'" class="panel panel-primary" style="width:100%; height:100%; margin:auto" ng-init="RC.startCalibration()">
+            <div ng-if="RC.state == 'calibrationSlide'"  style="width:100%; height:100%; margin:auto" ng-init="RC.startCalibration()">
                 <canvas id="plotting_canvas" width="500" height="500" style="cursor:crosshair;"></canvas>
                 <div class="calibrationDiv">
                     <input type="button" class="Calibration" id="Pt1"></input>
@@ -44,8 +44,8 @@
                     <input type="button" class="Calibration" id="Pt8"></input>
                     <input type="button" class="Calibration" id="Pt9"></input>
                 </div>
-                <div id="calibration_next" style="visibility: hidden;">
-                    <div class="panel-heading" style="font-weight: bolder ;">Calibration done</div>
+                <div id="calibration_next" class="panel panel-primary" style="width:90%; height:90%; visibility: hidden; vertical-align: middle;">
+                    <div class="panel-heading" style="font-weight: bolder ;">Calibration</div>
                     <div class="panel-body">
                         <p>Calibration is done. Click on 'Next' to continue.</p>
                         <button ng-click="RC.next()" type="button" class="btn btn-default" style="float:right ; margin-top:20px;font-size:20;">Next</button>
