--- a/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
+++ b/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
@@ -98,16 +98,16 @@
                 <tbody>
                     <tr>
                         <td>
-                        <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/ci.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-bottom:10px; margin-top: 5px; margin-left: 5px; margin-right: 5px;cursor: pointer;" ng-click="RC.nextPracticeQuestion('ci')">
+                        <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/ci.png" style="max-width: 100px ; max-height:100px ; display: inline ; margin: 0 auto; margin-bottom:10px; margin-top: 5px; margin-left: 5px; margin-right: 5px;cursor: pointer;" ng-click="RC.nextPracticeQuestion('ci')">
                         </td>
                         <td>
-                        <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/tr.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-bottom:10px; margin-top: 5px; margin-left: 5px; margin-right: 5px;cursor: pointer;" ng-click="RC.nextPracticeQuestion('tr')">
+                        <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/tr.png" style="max-width: 100px ; max-height:100px ; display: inline ; margin: 0 auto; margin-bottom:10px; margin-top: 5px; margin-left: 5px; margin-right: 5px;cursor: pointer;" ng-click="RC.nextPracticeQuestion('tr')">
                         </td>
                         <td>
-                        <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/gr.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-bottom:10px; margin-top: 5px; margin-left: 5px; margin-right: 5px;cursor: pointer;" ng-click="RC.nextPracticeQuestion('gr')">
+                        <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/gr.png" style="max-width: 100px ; max-height:100px ; display: inline ; margin: 0 auto; margin-bottom:10px; margin-top: 5px; margin-left: 5px; margin-right: 5px;cursor: pointer;" ng-click="RC.nextPracticeQuestion('gr')">
                         </td>
                         <td>
-                        <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/re.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-bottom:10px; margin-top: 5px; margin-left: 5px; margin-right: 5px;cursor: pointer;" ng-click="RC.nextPracticeQuestion('re')">
+                        <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/re.png" style="max-width: 100px ; max-height:100px ; display: inline ; margin: 0 auto; margin-bottom:10px; margin-top: 5px; margin-left: 5px; margin-right: 5px;cursor: pointer;" ng-click="RC.nextPracticeQuestion('re')">
                         </td>
                     </tr>
                 </tbody>
@@ -131,10 +131,10 @@
 
                 <p align="center">These were the messages available to the previous participant:</p>
                 <div style="margin-top:20px; margin-bottom:5px; margin-left:10px; margin-right:10px" align="center">
-                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/ci.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-bottom:15px; margin-top: 5px">
-                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/tr.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-bottom:15px; margin-top: 5px">
-                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/gr.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-bottom:15px; margin-top: 5px">
-                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/re.png" style="max-width: 85px ; max-height:85px ; display: inline ; margin: 0 auto; margin-bottom:15px; margin-top: 5px">
+                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/ci.png" style="max-width: 100px ; max-height:100px ; display: inline ; margin: 0 auto; margin-bottom:15px; margin-top: 5px">
+                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/tr.png" style="max-width: 100px ; max-height:100px ; display: inline ; margin: 0 auto; margin-bottom:15px; margin-top: 5px">
+                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/gr.png" style="max-width: 100px ; max-height:100px ; display: inline ; margin: 0 auto; margin-bottom:15px; margin-top: 5px">
+                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/re.png" style="max-width: 100px ; max-height:100px ; display: inline ; margin: 0 auto; margin-bottom:15px; margin-top: 5px">
                 </div>
                 <button ng-click="RC.nextPrepQuestions()" type="button" class="btn btn-default" style="float:right ; margin-top:20px;font-size:20;">Next</button>
             </div>
@@ -183,10 +183,10 @@
                         <div id="previous_messages" style="display:flex; width: 80%; flex:1; flex-direction: column; justify-content:end;">
                         <div style="display:flex; justify-content: center;"><b>These were the messages available to the previous participant:</b></div>
                         <div id="messages" style="display:flex; justify-content: space-between;">
-                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/ci.png" style="max-width: 85px ; max-height:85px ; display: inline ;">
-                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/tr.png" style="max-width: 85px ; max-height:85px ; display: inline ;">
-                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/gr.png" style="max-width: 85px ; max-height:85px ; display: inline ;">
-                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/re.png" style="max-width: 85px ; max-height:85px ; display: inline ;">
+                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/ci.png" style="max-width: 100px ; max-height:100px ; display: inline ;">
+                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/tr.png" style="max-width: 100px ; max-height:100px ; display: inline ;">
+                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/gr.png" style="max-width: 100px ; max-height:100px ; display: inline ;">
+                            <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/re.png" style="max-width: 100px ; max-height:100px ; display: inline ;">
                             
                         </div>
                         </div>
@@ -220,14 +220,14 @@
                         </div>
 
                         <div id="objects_to_choose" style="width: 100%; flex: 1; display:flex;">
-                            <div id="img1" style="display:flex; height: 200px; flex: 1; border: 1px solid black; align-items: center;">
-                                <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.img1}}.png" style="max-width: 200px ; max-height: 180px ; display: block ; margin: auto; cursor: pointer" ng-click="!RC.IsEnabled || RC.revealStrategyBox(RC.strategyQuestionIndex+'_'+question.img1+'1')" ng-disabled="!RC.IsEnabled">
+                            <div id="strategy_img1" style="display:flex; height: 200px; flex: 1; border: 1px solid black; align-items: center;">
+                                <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.img1}}.png" id="img1" style="max-width: 200px ; max-height: 180px ; display: block ; margin: auto; cursor: pointer" ng-click="!RC.IsEnabled || RC.revealStrategyBox(RC.strategyQuestionIndex+'_'+question.img1+'1')" ng-disabled="!RC.IsEnabled">
                             </div>
-                            <div id="img2" style="display:flex; height: 200px; flex: 1; border: 1px solid black; align-items: center;">
-                                <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.img2}}.png" style="max-width: 200px ; max-height: 180px ; display: block ; margin: auto; cursor: pointer" ng-click="!RC.IsEnabled || RC.revealStrategyBox(RC.strategyQuestionIndex+'_'+question.img2+'2')" ng-disabled="!RC.IsEnabled">
+                            <div id="strategy_img2" style="display:flex; height: 200px; flex: 1; border: 1px solid black; align-items: center;">
+                                <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.img2}}.png" id="img2" style="max-width: 200px ; max-height: 180px ; display: block ; margin: auto; cursor: pointer" ng-click="!RC.IsEnabled || RC.revealStrategyBox(RC.strategyQuestionIndex+'_'+question.img2+'2')" ng-disabled="!RC.IsEnabled">
                             </div>
-                            <div id="img3" style="display:flex; height: 200px; flex: 1; border: 1px solid black; align-items: center;">
-                                <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.img3}}.png" style="max-width: 200px ; max-height: 180px ; display: block ; margin: auto; cursor: pointer" ng-click="!RC.IsEnabled || RC.revealStrategyBox(RC.strategyQuestionIndex+'_'+question.img3+'3')" ng-disabled="!RC.IsEnabled">
+                            <div id="strategy_img3" style="display:flex; height: 200px; flex: 1; border: 1px solid black; align-items: center;">
+                                <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/{{question.img3}}.png" id="img3" style="max-width: 200px ; max-height: 180px ; display: block ; margin: auto; cursor: pointer" ng-click="!RC.IsEnabled || RC.revealStrategyBox(RC.strategyQuestionIndex+'_'+question.img3+'3')" ng-disabled="!RC.IsEnabled">
                             </div>
                         </div>
 
@@ -237,17 +237,16 @@
                         <div id="previous_messages" style="display:flex; width: 80%; flex:1; flex-direction: column; justify-content:end;">
                             <div style="display:flex; justify-content: center;"><b>These were the messages available to the previous participant:</b></div>
                                 <div id="messages" style="display:flex; justify-content: space-between;">
-                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/ci.png" style="max-width: 85px ; max-height:85px ; display: inline ;">
-                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/tr.png" style="max-width: 85px ; max-height:85px ; display: inline ;">
-                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/gr.png" style="max-width: 85px ; max-height:85px ; display: inline ;">
-                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/re.png" style="max-width: 85px ; max-height:85px ; display: inline ;">
+                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/ci.png" style="max-width: 100px ; max-height:100px ; display: inline ;">
+                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/tr.png" style="max-width: 100px ; max-height:100px ; display: inline ;">
+                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/gr.png" style="max-width: 100px ; max-height:100px ; display: inline ;">
+                                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/re.png" style="max-width: 100px ; max-height:100px ; display: inline ;">
                                     
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
             </div>
         <div ng-if="RC.state == 'generalQuestionsSlide'" class="panel panel-primary" style="width:90%; margin:auto">
             <div class="panel-heading" style="font-weight: bolder ;">Finally, please answer some questions about the experiment:</div>
