added base64 encoding to reduce size, size of images is now saved as well

--- a/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
+++ b/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
@@ -216,7 +216,7 @@
                             </div>
                         </div>
 
-                        <div style=""><b>Click on the object you think the previous participant intended you to pick.</b></div>
+                        <div><b>Click on the object you think the previous participant intended you to pick.</b></div>
                         <div ng-if="question.answer.secondAnswer != undefined" style="display:flex; flex:1; flex-direction: column; justify-content: center; align-items: center;">
                             <p class="centerStyle fontStyleBasic"><span class="questionFont"><b>Why did you choose this image?</b></span></p>
                             <p><textarea id="textArea" name="textArea" rows="4" cols="60" ng-model='question.answer.strategy'></textarea></p>
