add: script to generate inputdata.csv

--- a/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
+++ b/RefGameShapesGazeFeedbackExperiment/app__views__ExperimentRendering/RefGameShapesGazeFeedbackExperiment/RefGameShapesGazeFeedbackExperiment_render.html
@@ -62,6 +62,7 @@
                     <input type="button" class="Calibration" id="Pt9"></input>
                     <input type="button" class="Calibration" id="PtAccLeft"></input>
                     <input type="button" class="Calibration" id="PtAccRight"></input>
+                    <img ng-src="/dynamicAssets/images/Experiments/RefGameShapesGazeFeedbackExperiment/webgazer_instructions.png" id="Instr"></img>
 
                 </div>
                 <div style="display:flex; height: 100%; width: 100%; justify-content: center; align-items: center;">
